[tool.poetry]
name = "leetcode-150"
version = "0.1.0"
description = ""
authors = ["pablovazquezg <pablovazquezg@gmail.com>"]
readme = "README.md"
packages = [{include = "leetcode_150"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
